--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1744,6 +1744,12 @@ h3 {
   margin-bottom: 10px;
   color: #555;
 }
+p{
+  color: color-mix(in srgb, var(--default-color), transparent 30%);
+  margin: 5px 0 30px 0;
+  font-size: 20px;
+  font-weight: 400;
+}
 
 /* PDF Viewer */
 .pdf-viewer {
