--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,7 @@
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #030202; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #222222; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #106eea; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --accent-color: #7804fd; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
@@ -263,7 +263,7 @@ h6 {
     content: '';
     width: 0%;
     height: 3px;
-    background: #f6b209;
+    background: #7804fd;
     display: block;
     margin: auto;
     transition: 0.5s;
